--- a/index.html
+++ b/index.html
@@ -7,6 +7,77 @@
   <title>Akademnashr </title>
 </head>
 <body>
+  <!-- SITE-HEADER -->
+  <a href="index.html">
+    Akademnashr logo rasmi
+  </a>
+  <a href="#">Bosh sahifa</a>
+  <a href="">Kitoblar</a>
+  <a href="">Aksiyalarlar</a>
+  <a href="">Kontaktlar</a>
+  <a href="">Kitoblar</a>
+  <a href="">Ro'yxatdan o'tish</a>
+  <!-- HERO -->
+  <h2>Pythonda dasturlash <br>asoslari</h2>
+  <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng <br> mukammal qo‘llanma. Kitobning har bir bo‘limi <br> uchun maxsus video darslar yozilgan bo‘lib, ularga <br> kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
+  <a href="#">Buyurtma berish</a>
 
+  <!-- Python kitob rasmi  -->
+
+  <!-- Nega aynan Akademnashr  -->
+  <h2>Nega aynan Akademnashr?</h2>
+
+  <!-- Feature-rasmi  -->
+
+  <h3>Oson buyurtma qilish</h3>
+  <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
+
+  <!-- Feature-rasmi  -->
+
+  <h3>Eng sara kitoblar</h3>
+  <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
+
+  <!-- Feature-rasmi  -->
+
+  <h3>Tez yetkazib berish</h3>
+  <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
+
+  <!-- Aksiya  -->
+
+  <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
+  <p>Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
+  <p>Aksiyadagi eng katta to’plamda <strong>50 ta kitob</strong>ni <strong>350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+  <a href="#">Buyurtma berish</a>
+
+  <!-- AKSIYADAGI KITOBLAR TOPLAMI RASMI  -->
+
+  <!-- SITE_FOOTER -->
+<a href="index.html">Akademnashr logo rasmi</a>
+
+<a href="#" target="_blank">Telegram</a>
+<a href="#" target="_blank">Facebook</a>
+<a href="#" target="_blank">Instagram</a>
+
+<a href="#">Bosh sahifa</a>
+<a href="#">Kitoblar</a>
+<a href="#">Aksiyalar</a>
+<a href="#">Yangiliklar</a>
+<a href="#">Kontaktlar</a>
+
+<a href="#">Ilmiy nashrlar</a>
+<a href="#">Ilmiy-ommabop nashrlar</a>
+<a href="#">Ma'rifiy nashrlar</a>
+<a href="#">Lug'atlar</a>
+<a href="#">Adabiiy-badiiy nashrlar</a>
+<a href="#">Abituriyentlar uchun</a>
+<a href="#">Bolalar uchun</a>
+
+<a href="#">Ko'p so'raladigan savollar</a>
+<a href="#">Yetkazib berish haqida</a>
+<a href="#">To'lov usullari haqida</a>
+
+<a href="#">Bo'sh ish o'rinlari</a>
+<a href="#">Biz bilan bog'lanish</a>
+<a href="#">Maxfiylik nizomi</a>
 </body>
 </html>
