--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
   <a href="index.html">
     Akademnashr logo rasmi
   </a>
-  <a href="#">Bosh sahifa</a>
-  <a href="">Kitoblar</a>
-  <a href="">Aksiyalarlar</a>
-  <a href="">Kontaktlar</a>
-  <a href="">Kitoblar</a>
+  <ul>
+    <li><a href="#">Bosh sahifa</a></li>
+    <li><a href="">Kitoblar</a></li>
+    <li><a href="">Aksiyalarlar</a></li>
+    <li><a href="">Kontaktlar</a></li>
+    <li><a href="">Kitoblar</a></li>
+  </ul>
   <a href="">Ro'yxatdan o'tish</a>
   <!-- HERO -->
+  <hr>
   <h2>Pythonda dasturlash <br>asoslari</h2>
   <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng <br> mukammal qo‘llanma. Kitobning har bir bo‘limi <br> uchun maxsus video darslar yozilgan bo‘lib, ularga <br> kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
   <a href="#">Buyurtma berish</a>
@@ -25,22 +28,27 @@
   <!-- Python kitob rasmi  -->
 
   <!-- Nega aynan Akademnashr  -->
+  <hr>
+
   <h2>Nega aynan Akademnashr?</h2>
 
-  <!-- Feature-rasmi  -->
-
-  <h3>Oson buyurtma qilish</h3>
-  <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
-
-  <!-- Feature-rasmi  -->
-
-  <h3>Eng sara kitoblar</h3>
-  <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
-
-  <!-- Feature-rasmi  -->
-
-  <h3>Tez yetkazib berish</h3>
-  <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
+  <ul>
+    <li>
+      <!-- Feature-rasmi  -->
+      <h3>Oson buyurtma qilish</h3>
+      <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
+    </li>
+    <li>
+      <!-- Feature-rasmi  -->
+      <h3>Eng sara kitoblar</h3>
+      <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
+    </li>
+    <li>
+      <!-- Feature-rasmi  -->
+      <h3>Tez yetkazib berish</h3>
+      <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
+    </li>
+  </ul>
 
   <!-- Aksiya  -->
 
@@ -52,32 +60,44 @@
   <!-- AKSIYADAGI KITOBLAR TOPLAMI RASMI  -->
 
   <!-- SITE_FOOTER -->
-<a href="index.html">Akademnashr logo rasmi</a>
+  <a href="index.html">Akademnashr logo rasmi</a>
 
-<a href="#" target="_blank">Telegram</a>
-<a href="#" target="_blank">Facebook</a>
-<a href="#" target="_blank">Instagram</a>
+  <ul>
+    <li><a href="#" target="_blank">Telegram</a></li>
+    <li><a href="#" target="_blank">Facebook</a></li>
+    <li><a href="#" target="_blank">Instagram</a></li>
+  </ul>
 
-<a href="#">Bosh sahifa</a>
-<a href="#">Kitoblar</a>
-<a href="#">Aksiyalar</a>
-<a href="#">Yangiliklar</a>
-<a href="#">Kontaktlar</a>
+  <hr>
 
-<a href="#">Ilmiy nashrlar</a>
-<a href="#">Ilmiy-ommabop nashrlar</a>
-<a href="#">Ma'rifiy nashrlar</a>
-<a href="#">Lug'atlar</a>
-<a href="#">Adabiiy-badiiy nashrlar</a>
-<a href="#">Abituriyentlar uchun</a>
-<a href="#">Bolalar uchun</a>
+  <ul>
+    <li><a href="#">Bosh sahifa</a></li>
+    <li><a href="#">Kitoblar</a></li>
+    <li><a href="#">Aksiyalar</a></li>
+    <li><a href="#">Yangiliklar</a></li>
+    <li><a href="#">Kontaktlar</a></li>
+  </ul>
 
-<a href="#">Ko'p so'raladigan savollar</a>
-<a href="#">Yetkazib berish haqida</a>
-<a href="#">To'lov usullari haqida</a>
+  <ul>
+    <li><a href="#">Ilmiy nashrlar</a></li>
+    <li><a href="#">Ilmiy-ommabop nashrlar</a></li>
+    <li><a href="#">Ma'rifiy nashrlar</a></li>
+    <li><a href="#">Lug'atlar</a></li>
+    <li><a href="#">Adabiiy-badiiy nashrlar</a></li>
+    <li><a href="#">Abituriyentlar uchun</a></li>
+    <li><a href="#">Bolalar uchun</a></li>
+  </ul>
 
-<a href="#">Bo'sh ish o'rinlari</a>
-<a href="#">Biz bilan bog'lanish</a>
-<a href="#">Maxfiylik nizomi</a>
+  <ul>
+    <li><a href="#">Ko'p so'raladigan savollar</a></li>
+    <li><a href="#">Yetkazib berish haqida</a></li>
+    <li><a href="#">To'lov usullari haqida</a></li>
+  </ul>
+
+  <ul>
+    <li><a href="#">Bo'sh ish o'rinlari</a></li>
+    <li><a href="#">Biz bilan bog'lanish</a></li>
+    <li><a href="#">Maxfiylik nizomi</a></li>
+  </ul>
 </body>
 </html>
