--- a/index.html
+++ b/index.html
@@ -8,96 +8,112 @@
 </head>
 <body>
   <!-- SITE-HEADER -->
-  <a href="index.html">
-    Akademnashr logo rasmi
-  </a>
-  <ul>
-    <li><a href="#">Bosh sahifa</a></li>
-    <li><a href="">Kitoblar</a></li>
-    <li><a href="">Aksiyalarlar</a></li>
-    <li><a href="">Kontaktlar</a></li>
-    <li><a href="">Kitoblar</a></li>
-  </ul>
-  <a href="">Ro'yxatdan o'tish</a>
-  <!-- HERO -->
-  <hr>
-  <h2>Pythonda dasturlash <br>asoslari</h2>
-  <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng <br> mukammal qo‘llanma. Kitobning har bir bo‘limi <br> uchun maxsus video darslar yozilgan bo‘lib, ularga <br> kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
-  <a href="#">Buyurtma berish</a>
+  <header>
+    <a href="index.html">
+      Akademnashr logo rasmi
+    </a>
+    <nav>
+      <ul>
+        <li><a href="#">Bosh sahifa</a></li>
+        <li><a href="">Kitoblar</a></li>
+        <li><a href="">Aksiyalarlar</a></li>
+        <li><a href="">Kontaktlar</a></li>
+        <li><a href="">Kitoblar</a></li>
+      </ul>
+    </nav>
+    <a href="">Ro'yxatdan o'tish</a>
+  </header>
 
-  <!-- Python kitob rasmi  -->
+  <main>
+    <section>
+      <!-- HERO -->
+      <div>
+        <hr>
+        <h2>Pythonda dasturlash <br>asoslari</h2>
+        <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng <br> mukammal qo‘llanma. Kitobning har bir bo‘limi <br> uchun maxsus video darslar yozilgan bo‘lib, ularga <br> kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
+        <a href="#">Buyurtma berish</a>
+      </div>
 
-  <!-- Nega aynan Akademnashr  -->
-  <hr>
+      <!-- Python kitob rasmi  -->
+    </section>
 
-  <h2>Nega aynan Akademnashr?</h2>
 
-  <ul>
-    <li>
-      <!-- Feature-rasmi  -->
-      <h3>Oson buyurtma qilish</h3>
-      <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
-    </li>
-    <li>
-      <!-- Feature-rasmi  -->
-      <h3>Eng sara kitoblar</h3>
-      <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
-    </li>
-    <li>
-      <!-- Feature-rasmi  -->
-      <h3>Tez yetkazib berish</h3>
-      <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
-    </li>
-  </ul>
+    <section>
+      <!-- Nega aynan Akademnashr  -->
+      <hr>
+      <h2>Nega aynan Akademnashr?</h2>
+      <ul>
+        <li>
+          <!-- Feature-rasmi  -->
+          <h3>Oson buyurtma qilish</h3>
+          <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
+        </li>
+        <li>
+          <!-- Feature-rasmi  -->
+          <h3>Eng sara kitoblar</h3>
+          <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
+        </li>
+        <li>
+          <!-- Feature-rasmi  -->
+          <h3>Tez yetkazib berish</h3>
+          <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
+        </li>
+      </ul>
+    </section>
 
-  <!-- Aksiya  -->
 
-  <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
-  <p>Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
-  <p>Aksiyadagi eng katta to’plamda <strong>50 ta kitob</strong>ni <strong>350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
-  <a href="#">Buyurtma berish</a>
+    <section>
+      <!-- Aksiya  -->
+      <div>
+        <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
+        <p>Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
+        <p>Aksiyadagi eng katta to’plamda <strong>50 ta kitob</strong>ni <strong>350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+        <a href="#">Buyurtma berish</a>
+      </div>
 
-  <!-- AKSIYADAGI KITOBLAR TOPLAMI RASMI  -->
+      <!-- AKSIYADAGI KITOBLAR TOPLAMI RASMI  -->
+    </section>
+  </main>
 
-  <!-- SITE_FOOTER -->
-  <a href="index.html">Akademnashr logo rasmi</a>
-
-  <ul>
-    <li><a href="#" target="_blank">Telegram</a></li>
-    <li><a href="#" target="_blank">Facebook</a></li>
-    <li><a href="#" target="_blank">Instagram</a></li>
-  </ul>
-
-  <hr>
-
-  <ul>
-    <li><a href="#">Bosh sahifa</a></li>
-    <li><a href="#">Kitoblar</a></li>
-    <li><a href="#">Aksiyalar</a></li>
-    <li><a href="#">Yangiliklar</a></li>
-    <li><a href="#">Kontaktlar</a></li>
-  </ul>
-
-  <ul>
-    <li><a href="#">Ilmiy nashrlar</a></li>
-    <li><a href="#">Ilmiy-ommabop nashrlar</a></li>
-    <li><a href="#">Ma'rifiy nashrlar</a></li>
-    <li><a href="#">Lug'atlar</a></li>
-    <li><a href="#">Adabiiy-badiiy nashrlar</a></li>
-    <li><a href="#">Abituriyentlar uchun</a></li>
-    <li><a href="#">Bolalar uchun</a></li>
-  </ul>
-
-  <ul>
-    <li><a href="#">Ko'p so'raladigan savollar</a></li>
-    <li><a href="#">Yetkazib berish haqida</a></li>
-    <li><a href="#">To'lov usullari haqida</a></li>
-  </ul>
-
-  <ul>
-    <li><a href="#">Bo'sh ish o'rinlari</a></li>
-    <li><a href="#">Biz bilan bog'lanish</a></li>
-    <li><a href="#">Maxfiylik nizomi</a></li>
-  </ul>
+  <footer>
+    <!-- SITE_FOOTER -->
+    <a href="index.html">Akademnashr logo rasmi</a>
+    <div>
+      <ul>
+        <li><a href="#" target="_blank">Telegram</a></li>
+        <li><a href="#" target="_blank">Facebook</a></li>
+        <li><a href="#" target="_blank">Instagram</a></li>
+      </ul>
+    </div>
+    <hr>
+    <div>
+      <ul>
+        <li><a href="#">Bosh sahifa</a></li>
+        <li><a href="#">Kitoblar</a></li>
+        <li><a href="#">Aksiyalar</a></li>
+        <li><a href="#">Yangiliklar</a></li>
+        <li><a href="#">Kontaktlar</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Ilmiy nashrlar</a></li>
+        <li><a href="#">Ilmiy-ommabop nashrlar</a></li>
+        <li><a href="#">Ma'rifiy nashrlar</a></li>
+        <li><a href="#">Lug'atlar</a></li>
+        <li><a href="#">Adabiiy-badiiy nashrlar</a></li>
+        <li><a href="#">Abituriyentlar uchun</a></li>
+        <li><a href="#">Bolalar uchun</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Ko'p so'raladigan savollar</a></li>
+        <li><a href="#">Yetkazib berish haqida</a></li>
+        <li><a href="#">To'lov usullari haqida</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Bo'sh ish o'rinlari</a></li>
+        <li><a href="#">Biz bilan bog'lanish</a></li>
+        <li><a href="#">Maxfiylik nizomi</a></li>
+      </ul>
+    </div>
+  </footer>
 </body>
 </html>
