--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Akademnashr </title>
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <!-- Styles -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -43,7 +48,7 @@
     <section class="features">
       <!-- Nega aynan Akademnashr  -->
       <hr class="orange-line">
-        <h2 class="features-heading">Nega aynan <br> Akademnashr?</h2>
+      <h2 class="features-heading">Nega aynan <br> Akademnashr?</h2>
       <ul class="list-style">
         <li class="feature">
           <div class="feature-icon-wrapper">
@@ -79,7 +84,7 @@
         <a class="main-link" href="#">Buyurtma berish</a>
       </div>
 
-      <img class="promo-img" src="image/sale-img.jpg" alt="sotuvdagi kitoblar rasmi" width="440" height="440" srcset="image/sale-img.jpg 1x, image/sale-img@2x.jpg 2x">
+      <img class="promo-img" src="image/sale-img.jpg" alt="sotuvdagi kitoblar rasmi" width="440" height="440" srcset="image/sale-img.jpg 1x, image/sale-img@2x.png 2x">
     </section>
   </main>
 
