--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <div class="sitenav-header-actions">
       <nav class="sitenav">
         <ul class="sitenav-lists">
-          <li><a class="sitenav-link" href="#">Bosh sahifa</a></li>
-          <li><a class="sitenav-link" href="">Kitoblar</a></li>
-          <li><a class="sitenav-link" href="">Aksiyalarlar</a></li>
-          <li><a class="sitenav-link" href="">Kontaktlar</a></li>
-          <li><a class="sitenav-link" href="">Kitoblar</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Bosh sahifa</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="">Kitoblar</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="">Aksiyalarlar</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="">Kontaktlar</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="">Kitoblar</a></li>
         </ul>
       </nav>
       <a class="main-link" href="">Ro'yxatdan o'tish</a>
@@ -85,8 +85,10 @@
       <!-- Aksiya  -->
       <div class="aksiya">
         <h2 class="sale-heading">Bolalar kitoblari uchun ajoyib aksiya!</h2>
-        <p class="sale-info">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
-        <p class="sale-info">Aksiyadagi eng katta to’plamda <strong class="promo-highlight">50 ta kitob</strong>ni <strong class="promo-highlight">350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+        <div class="sale-info-wrapper">
+          <p class="sale-info">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
+          <p class="sale-info">Aksiyadagi eng katta to’plamda <strong class="promo-highlight">50 ta kitob</strong>ni <strong class="promo-highlight">350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+        </div>
         <a class="main-link" href="#">Buyurtma berish</a>
       </div>
 
@@ -103,7 +105,7 @@
 
       <!-- IJTIMOIY TARMOQLAR -->
       <div class="social-logos">
-        <ul class="list-style-footer">
+        <ul class="site-footer-socials">
           <li><a href="#" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><path fill="currentColor" d="M12 0C5.376 0 0 5.376 0 12s5.376 12 12 12 12-5.376 12-12S18.624 0 12 0Zm5.568 8.16c-.18 1.896-.96 6.504-1.356 8.628-.168.9-.504 1.2-.816 1.236-.696.06-1.224-.456-1.896-.9-1.056-.696-1.656-1.128-2.676-1.8-1.188-.78-.42-1.212.264-1.908.18-.18 3.252-2.976 3.312-3.228a.24.24 0 0 0-.06-.216c-.072-.06-.168-.036-.252-.024-.108.024-1.788 1.14-5.064 3.348-.48.324-.912.492-1.296.48-.432-.012-1.248-.24-1.86-.444-.756-.24-1.344-.372-1.296-.792.024-.216.324-.432.888-.66 3.504-1.524 5.832-2.532 6.996-3.012 3.336-1.392 4.02-1.632 4.476-1.632.096 0 .324.024.468.144.12.096.156.228.168.324-.012.072.012.288 0 .456Z"/></svg>
           </a></li>
