Make site-footer responsive

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Akademnashr </title>
   <!-- Styles -->
 
-  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
-  <!-- <link rel="stylesheet" href="css/styles.css"> -->
-  <link rel="stylesheet" href="css/styles.min.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
 </head>
 <body>
   <!-- SITE-HEADER -->
@@ -105,7 +105,7 @@
     <!-- SITE_FOOTER -->
     <div class="container">
       <div class="site-footer__top">
-        <a class="logo-link" href="index.html">
+        <a class="site-footer__logo-link logo-link" href="index.html">
           <img src="image/logo.svg" alt="akademnashr logosi" width="227" height="59">
         </a>
         <!-- IJTIMOIY TARMOQLAR -->
