--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <div class="hero-container container">
         <div class="hero-content">
           <hr class="orange-line">
-          <h2 class="hero-heading">Pythonda dasturlash <br>asoslari</h2>
-          <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng <br> mukammal qo‘llanma. Kitobning har bir bo‘limi <br> uchun maxsus video darslar yozilgan bo‘lib, ularga <br> kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
+          <h2 class="hero-heading">Pythonda dasturlash asoslari</h2>
+          <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. <br> Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, <br> ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
           <a class="main-link" href="#">Buyurtma berish</a>
         </div>
         <img class= "hero-img" src="image/python-book.jpg" alt="Phython kitob rasmi" width="510"
@@ -83,7 +83,7 @@
     </section>
 
 
-    <section class="promo">
+    <section class="promo" style="display: none;">
       <!-- Aksiya  -->
       <div class="container">
         <div class="promo-inner">
