--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </section>
 
 
-    <section class="promo" style="display: none;">
+    <section class="promo">
       <!-- Aksiya  -->
       <div class="container">
         <div class="promo-inner">
